# Travelers-Multiplayer-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  Travelers-Multiplayer-Engine.sln
Client/: CMakeLists.txt
Ecs/: CMakeLists.txt
Ecs/include/TRA/ecs/: common.hpp  engine.hpp  iSystem.hpp
Ecs/internal/: systemManager.hpp
Ecs/src/: engine.cpp  systemManager.cpp
Engine/: CMakeLists.txt
Engine/include/TME/engine/: ISerializableComponent.hpp  disconnectedComponent.hpp  message.hpp  networkEcsUtils.hpp  newConnectionComponent.hpp
Engine/include/TRA/engine/: ISerializableComponent.hpp  connectionStatusComponent.hpp  disconnectedComponent.hpp  message.hpp  networkEcs.hpp  networkEcsUtils.hpp  networkEngine.hpp  networkRootComponentTag.hpp  newConnectionComponent.hpp
Engine/internal/: acceptConnectionSystem.hpp  destroyComponentTag.hpp  disconnectSystem.hpp  iNetworkSystem.hpp  messageComponent.hpp  messageFactory.hpp  messageHeader.hpp  messageSerializer.hpp  messageSystem.hpp  networkSystemRegistrar.hpp  pendingDisconnectComponent.hpp  pendingDisconnectSystem.hpp  pingComponent.hpp  pingSystem.hpp  selfComponent.hpp  socketComponent.hpp
Engine/src/: acceptConnectionSystem.cpp  disconnectSystem.cpp  message.cpp  messageFactory.cpp  messageSerializer.cpp  messageSystem.cpp  networkEcs.cpp  networkEngine.cpp  networkSystemRegistrar.cpp  pendingDisconnectSystem.cpp
TestClient/: CMakeLists.txt
TestClient/src/: main.cpp
TestServer/: CMakeLists.txt
TestServer/TmeLog/: 06.25.2025 11.51.00.txt  06.25.2025 11.52.40.txt  log_2025-06-30_09-14-02.txt
TestServer/src/: main.cpp
TestServer/x64/Debug/: TestServer.ilk  vc143.idb
TestServer/x64/Debug/TestServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog
TestServer/x64/Release/: TestServer.exe.recipe  TestServer.ipdb
TestServer/x64/Release/TestServer.tlog/: CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TravelersMultiplayerEngine/: CMakeLists.txt  CMakeSettings.json  ROADMAP.md  TravelersMultiplayerEngine.vcxproj  TravelersMultiplayerEngine.vcxproj.filters  cpp.hint
TravelersMultiplayerEngine/Client/: CMakeLists.txt
TravelersMultiplayerEngine/Client/src/: client.cpp
TravelersMultiplayerEngine/CommonInclude/TME/: debugUtils.hpp  errorCode.hpp
TravelersMultiplayerEngine/Core/: CMakeLists.txt
TravelersMultiplayerEngine/Core/internal/: socketUtils.hpp
TravelersMultiplayerEngine/Core/src/: netUtils.cpp  socketUtils.cpp  tcpSocket.cpp  udpSocket.cpp  wsaInitializer.cpp
TravelersMultiplayerEngine/Engine/: CMakeLists.txt
TravelersMultiplayerEngine/Engine/internal/: destroyComponentTag.hpp  disconnectSystem.hpp  iNetworkSystem.hpp  messageComponent.hpp  messageFactory.hpp  messageHeader.hpp  messageSerializer.hpp  messageSystem.hpp  networkSystemRegistrar.hpp  pendingDisconnectSystem.hpp  pingComponent.hpp  pingSystem.hpp  selfComponent.hpp  sendMessageComponent.hpp  socketComponent.hpp  tcpSocketComponent.hpp
TravelersMultiplayerEngine/Engine/src/: acceptConnectionSystem.cpp  message.cpp  messageFactory.cpp  messageSerializer.cpp  messageSystem.cpp  networkEcs.cpp  networkEngine.cpp  networkSystemRegistrar.cpp  pingSystem.cpp
TravelersMultiplayerEngine/Server/: CMakeLists.txt
TravelersMultiplayerEngine/Server/internal/: client.hpp
TravelersMultiplayerEngine/Server/src/: server.cpp  serverHandler.cpp
TravelersMultiplayerEngine/TestClient/: CMakeLists.txt
TravelersMultiplayerEngine/TestClient/src/: main.cpp
TravelersMultiplayerEngine/TestServer/src/: main.cpp
TravelersMultiplayerEngine/include/: Client.h  Server.h  TravelersMultiplayerEngine.h  Utils.h  WinsockInitializer.h
TravelersMultiplayerEngine/include/TME/: ConsoleLogger.h  ErrorCodes.hpp  Export.hpp  FileLogger.h  ILogger.h  IThreadManager.h  Logger.h  NetworkEngine.hpp  Server.h  ServiceLocator.h  ThreadManager.h  Utils.hpp  WinsockInitializer.h  errorCode.hpp  message.hpp
TravelersMultiplayerEngine/internal/: ClientCore.hpp  Message.hpp  MessageIdGenerator.hpp  NetworkCommon.hpp  NetworkManager.hpp  ServerCore.hpp  ServiceLocator.hpp  ServiceManager.hpp  TcpMessage.hpp  ThreadManager.hpp  Utils.hpp  WsaInitializer.hpp
TravelersMultiplayerEngine/internal/Core/: ClientCore.hpp  EngineCore.hpp  ServerCore.hpp
TravelersMultiplayerEngine/internal/core/: iSocket.hpp  messageFactory.hpp  messageSerializer.hpp  networkInclude.hpp  socketUtils.hpp  tcpSocket.hpp  udpSocket.hpp
TravelersMultiplayerEngine/internal/interface/: IThreadManager.hpp
TravelersMultiplayerEngine/internal/interfaces/: ILogger.hpp  ISocket.hpp
TravelersMultiplayerEngine/internal/loggers/: CompositeLogger.hpp  ConsoleLogger.hpp  FileLogger.hpp
TravelersMultiplayerEngine/internal/sockets/: TcpSocket.hpp
TravelersMultiplayerEngine/src/: Client.cpp  ClientCore.cpp  ConsoleLogger.cpp  Engine.cpp  FileLogger.cpp  Logger.cpp  Message.cpp  MessageIdGenerator.cpp  NetworkEngine.cpp  NetworkManager.cpp  Server.cpp  ServerCore.cpp  ServiceLocator.cpp  ServiceManager.cpp  TcpMessage.cpp  ThreadManager.cpp  TravelersMultiplayerEngine.cpp  Utils.cpp  WinsockInitializer.cpp  WsaInitializer.cpp
TravelersMultiplayerEngine/src/API/: message.cpp
TravelersMultiplayerEngine/src/Core/: ClientCore.cpp  EngineCore.cpp  ServerCore.cpp
TravelersMultiplayerEngine/src/core/: messageFactory.cpp  messageSerializer.cpp  socketUtils.cpp  tcpSocket.cpp  udpSocket.cpp
TravelersMultiplayerEngine/src/loggers/: CompositeLogger.cpp  ConsoleLogger.cpp  FileLogger.cpp
TravelersMultiplayerEngine/src/sockets/: TcpSocket.cpp
TravelersMultiplayerEngine/x64/Debug/Traveler.9656bd2d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
TravelersMultiplayerEngine/x64/Release/Traveler.9656bd2d.tlog/: CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  (+1 more)
exemples/chat/Client/: CMakeLists.txt  main_client.cpp
exemples/chat/Server/: CMakeLists.txt  main_server.cpp
(+396 files in other folders)
